--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 	<properties>     
 		<jdk.version>1.8</jdk.version>
 		<spring.version>5.1.2.RELEASE</spring.version>
-		<junit.version>4.11</junit.version>
+		<junit.version>4.11</junit.version> <!-- MALLESH -->
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://35.154.20.12:9000/</sonar.host.url>
    <!--		<sonar.login>17543288108f15e85bae3ce39fb984f90ac6a810</sonar.login> -->
